# RefactorConstantes

./: .gitignore  BATCH_FILES_README.md  GUIDE_RAPIDE.md  NOUVEAUX_FICHIERS.md  README.md  SIMPLIFIED_README.md  constants_refactor.py  quick_start.bat  quick_start.ps1  requirements.txt  run_examples.bat  run_integration_tests.py  run_simple.bat  run_simple.ps1  run_tests.py  simplified_cst_refactor.py  test_constants_refactor.py  test_integration.py  test_integration_simple.py  test_simplified.py  validate_test_setup.py
.kiro/specs/cpp-constants-refactor/: design.md  requirements.md  tasks.md
test_data/: CMakeLists.txt  edge_cases_constants.h  large_constants.h  sample_constants.h
test_data/complex_project/: CMakeLists.txt
test_data/complex_project/modules/logging/: CMakeLists.txt
test_data/complex_project/modules/plugin_system/: CMakeLists.txt
test_data/complex_project/src/core/: core.cpp  core.h
test_data/complex_project/src/database/: connection.cpp  connection.h
test_data/complex_project/src/network/: client.cpp  client.h
test_data/simple_project/: CMakeLists.txt  constants.h  main.cpp  utils.cpp
test_data/src/: main.cpp
test_data/src/config/: config_loader.cpp  config_loader.h
test_data/src/network/: network_manager.cpp  network_manager.h
test_data/src/utils/: file_utils.cpp  file_utils.h
